# DTC

./: .gitignore  CMakeLists.txt  check_cn.sh
conf/: server.yaml
docs/: buiding.md  configure.md  overview.md  quickstart.md
src/: utils.cmake
src/core/: CMakeLists.txt  global.h  main.cc
src/core/algorithm/: hash.cc  hash.h  lru_bit.cc  lru_bit.h
src/core/buffer/: buffer_def.h  buffer_flush.cc  buffer_flush.h  buffer_pond.cc  buffer_pond.h  buffer_remoteLog.h
src/core/chain/: barrier_ask_answer_chain.cc  barrier_ask_answer_chain.h  black_hole_ask_chain.cc  black_hole_ask_chain.h  buffer_bypass_answer_chain.cc  buffer_bypass_answer_chain.h  buffer_bypass_ask_chain.cc  buffer_bypass_ask_chain.h  buffer_process_answer_chain.cc  buffer_process_answer_chain.h  buffer_process_ask_chain.cc  buffer_process_ask_chain.h  job_procedure.cc  system_command_ask_chain.cc  system_command_ask_chain.h
src/core/data/: col_expand.cc  col_expand.h  container_dtcd.cc  data_chunk.h  data_process.h  defragment.h
src/core/hotbk/: hb_feature.cc  hb_feature.h  hb_log.cc  hb_log.h  hot_backup_ask_chain.cc  hot_backup_ask_chain.h
src/core/lib/: CMakeLists.txt
src/core/log/: logger.cc  logger.h
src/core/mem/: feature.cc  feature.h  fence_queue.h  mallocator.h  pt_malloc.cc  pt_malloc.h  sys_malloc.cc  sys_malloc.h
src/core/misc/: dtc_code.h  main_supply.cc  main_supply.h  mysql_error.h  purge_processor.h  reader_interface.h
src/core/node/: empty_filter.cc  empty_filter.h  node.h  node_index.cc  node_index.h  node_list.h  node_set.cc  node_set.h
src/core/nodegroup/: ng_info.cc  ng_info.h  ng_list.h
src/core/raw/: raw_data.cc  raw_data.h  raw_data_process.cc  raw_data_process.h
src/core/task/: task_pendlist.cc  task_pendlist.h
src/core/time/: expire_time.cc  expire_time.h
src/core/tree/: t_tree.cc  t_tree.h  tree_data.cc  tree_data.h  tree_data_keycmp.h  tree_data_process.cc  tree_data_process.h
src/libs/common/: CMakeLists.txt  Condition.h  buffer.cc  buffer.h  compiler.h  consistent_hash_selector.cc  consistent_hash_selector.h  container.h  data_connector_ask_chain.cc  data_connector_ask_chain.h  dtc_error_code.h  dtc_global.cc  dtc_global.h  dtcutils.h  encode.cc  file_backed_key_set.cc  file_backed_key_set.h  hotback_task.cc  hotback_task.h  interface.h  job_entrance_ask_chain.cc  job_entrance_ask_chain.h  journal_id.h  localip.c  mem_check.cc  mem_check.h  multi_request.cc  multi_request.h  namespace.h  pipequeue.h  pipetask.h  proc_title.c  protocol.h  receiver.h  remote_dtc_ask_answer_chain.cc  remote_dtc_ask_answer_chain.h  result.h  section.cc  section.h  shmem.cc  (+6 more)
src/libs/common/agent/: agent_client.cc  agent_client.h  agent_listen_pool.cc  agent_listen_pool.h  agent_listener.cc  agent_listener.h  agent_multi_request.cc  agent_multi_request.h  agent_receiver.cc  agent_receiver.h  agent_sender.cc  agent_sender.h  agent_unit.cc  agent_unit.h
src/libs/common/algorithm/: bitsop.cc  bitsop.h  chash.cc  chash.h  compress.cc  compress.h  markup_stl.cc  markup_stl.h  md5.cc  md5.h  new_hash.cc  new_hash.h  non_copyable.h  relative_hour_calculator.h  singleton.h  timestamp.h
src/libs/common/atomic/: atomic.h  atomic.hpp  atomic_asm.h  atomic_asm8.h  atomic_gcc.h  atomic_gcc8.h
src/libs/common/blacklist/: blacklist.cc  blacklist.h  blacklist_unit.cc  blacklist_unit.h
src/libs/common/client/: client_async.cc  client_async.h  client_dgram.cc  client_dgram.h  client_resource_pool.cc  client_resource_pool.h  client_sync.cc  client_sync.h  client_unit.cc  client_unit.h
src/libs/common/config/: auto_config.cc  auto_config.h  config.cc  config.h  dbconfig.cc  dbconfig.h  dbconfig_tdef.cc  parse_cluster_config.cc  parse_cluster_config.h
src/libs/common/connector/: connector_client.cc  connector_client.h  connector_group.cc  connector_group.h
src/libs/common/daemon/: daemon.cc  daemon.h  daemon_wait.cc
src/libs/common/decode/: decode.cc  decode.h  decoder_base.cc  decoder_base.h
src/libs/common/field/: field.cc  field.h  field_api.cc  field_api.h  field_export.h
src/libs/common/key/: key_helper.cc  key_helper.h  key_route_ask_chain.cc  key_route_ask_chain.h  keycodec.h
src/libs/common/list/: hlist.h  list.h
src/libs/common/listener/: listener.cc  listener.h  listener_bind.cc  listener_pool.cc  listener_pool.h
src/libs/common/lock/: lock.h  lock_free_queue.h  lock_free_queue_imp.h  system_lock.cc  system_lock.h
src/libs/common/log/: log.h
src/libs/common/my/: my_comm.h  my_request.cc  my_request.h
src/libs/common/packet/: packet.h  packet_base.cc  packet_client.cc  packet_result.cc  packet_server.cc
src/libs/common/plugin/: plugin_agent_mgr.h  plugin_decoder.cc  plugin_decoder.h  plugin_dgram.cc  plugin_dgram.h  plugin_global.cc  plugin_global.h  plugin_listener_pool.cc  plugin_listener_pool.h  plugin_mgr.cc  plugin_mgr.h  plugin_proxy_listener_pool.cc  plugin_proxy_listener_pool.h  plugin_proxy_mgr.cc  plugin_request.cc  plugin_request.h  plugin_sync.cc  plugin_sync.h  plugin_timer.cc  plugin_timer.h  plugin_unit.cc  plugin_unit.h  plugin_worker.cc  plugin_worker.h
src/libs/common/poll/: myepoll.h  poll_thread_group.cc  poll_thread_group.h  poller.cc  poller.h  poller_base.cc  poller_base.h
src/libs/common/queue/: lqueue.h  mtpqueue.h  mtpqueue_nolock.h  wait_queue.h
src/libs/common/request/: request_base.h  request_base_all.h  request_threading.h
src/libs/common/socket/: socket_addr.cc  socket_addr.h  socket_bind.cc  unix_socket.h
src/libs/common/table/: hotbackup_table_def.cc  hotbackup_table_def.h  table_def.cc  table_def.h  table_def_manager.cc  table_def_manager.h
src/libs/common/task/: task_api.cc  task_base.cc  task_base.h  task_const.cc  task_copy.cc  task_multi_unit.cc  task_multi_unit.h  task_pkey.cc  task_pkey.h  task_request.cc  task_request.h  task_server.cc
src/libs/common/thread/: thread.cc  thread.h  thread_cpu_stat.cc  thread_cpu_stat.h
src/libs/common/timer/: timer_list.cc  timer_list.h
src/rule/: CMakeLists.txt  log.cc  log.h  re_function.cc  re_load.cc  rule.cc
src/utils/: CMakeLists.txt  conf-gen-utils.cc  log.h
(+261 files in other folders)
